<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/appBackground"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".Activities.SignInActivity"
>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
        >
            <EditText
                    android:id="@+id/emailIDText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_id"
                    android:ems="20"
                    android:textSize="22sp"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
        >
            <EditText
                    android:id="@+id/nameText" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:ems="20"
                    android:inputType="text"
                    android:textSize="22sp"
            />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
        >
            <EditText
                    android:id="@+id/nicknameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick_name"
                    android:ems="20"
                    android:inputType="text"
                    android:textSize="22sp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
        >
            <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:ems="20"
                    android:inputType="textPassword"
                    android:textSize="22sp"
            />
        </android.support.design.widget.TextInputLayout>


    <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/languageSpinner"
            android:prompt="@string/LANGUAGES"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"/>

    <Spinner
            android:id="@+id/nationalitySpinner"
            android:prompt="@string/NATIONALITY"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"

    />
    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
    />

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"

    >
        <Button
                android:id="@+id/signUpButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/SIGNUP"


        />

        <Button
                android:id="@+id/signInButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:text="@string/SIGNIN"

        />

    </LinearLayout>



</LinearLayout>
</ScrollView>